--- a/catalog.html
+++ b/catalog.html
@@ -6,21 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jazz</title>
   <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
   <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
   <link rel="stylesheet" href="/images/css/catalog.css">
+  <script src="/images/fancybox/fancybox.umd.js" defer></script>
   <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
-  <script src="/images/js/script.js" defer></script>
 </head>
 <body>
   <div class="page root">
-    <header class="header container">
-      <div class="row">
+    <header class="header">
+      <div class="container">
+        <div class="row">
           <div class="col-md-2">
             <a href="/" class="logo">
-              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-images" />
+              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
             </a>
           </div>
            <div class="col-md-8">
@@ -52,6 +54,8 @@
           <!-- /.col-md-2 -->
         </div>
       <!-- /.row -->
+      </div>
+      <!-- /.container -->
     </header>
     <main>
       <section class="banner">
