--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
-  <script src="/images/js/script.js" defer></script>
 </head>
 <body>
    <div class="page-root">
-    <header class="header container">
-      <div class="row">
+    <header class="header">
+      <div class="container">
+        <div class="row">
           <div class="col-md-2">
             <a href="/" class="logo">
-              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-images" />
+              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
             </a>
           </div>
            <div class="col-md-8">
@@ -54,6 +54,8 @@
           <!-- /.col-md-2 -->
         </div>
       <!-- /.row -->
+      </div>
+      <!-- /.container -->
     </header>
     <main>
       <section class="banner section-yellow">
@@ -215,15 +217,15 @@
                   <div class="brand-card-wrapper">
                     <div class="brand-cards-benefits">
                       <div class="brand-card-benefit">
-                        <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="js-svg-img">
+                        <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="js-svg-img card-benefit-image">
                         <span class="brand-icon-text">Органический состав</span>
                       </div>
                       <div class="brand-card-benefit">
-                        <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="js-svg-img">
+                        <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="js-svg-img card-benefit-image">
                         <span class="brand-icon-text">Эффективная формула</span>
                       </div>
                       <div class="brand-card-benefit">
-                        <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="js-svg-img">
+                        <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="js-svg-img card-benefit-image">
                         <span class="brand-icon-text">Европейское качество</span>
                       </div>
                     </div>
@@ -248,15 +250,15 @@
                   <div class="brand-card-wrapper">
                     <div class="brand-cards-benefits">
                       <div class="brand-card-benefit">
-                        <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="js-svg-img">
+                        <img src="/images/img/brand-card-organic.svg" alt="Icon: organic" class="js-svg-img card-benefit-image">
                         <span class="brand-icon-text">Органический состав</span>
                       </div>
                       <div class="brand-card-benefit">
-                        <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="js-svg-img">
+                        <img src="/images/img/brand-card-effective.svg" alt="Icon: effective" class="js-svg-img card-benefit-image">
                         <span class="brand-icon-text">Эффективная формула</span>
                       </div>
                       <div class="brand-card-benefit">
-                        <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="js-svg-img">
+                        <img src="/images/img/brand-card-quality.svg" alt="Icon: quality" class="js-svg-img card-benefit-image">
                         <span class="brand-icon-text">Европейское качество</span>
                       </div>
                     </div>
@@ -496,7 +498,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="success-card">
-                  <img src="/images/img/success-icon-1.svg" alt="Icon: Success-icon" class="js-svg-img">
+                  <img src="/images/img/success-icon-1.svg" alt="Icon: Success-icon" class="js-svg-img success-card-img">
                   <p class="success-text">Совершайте любые покупки в Jazz-Holding со скидкой</p>
                   <span class="order-num">01</span>
                 </div>
@@ -505,7 +507,7 @@
               <!-- /.col-md-4 -->
               <div class="col-md-4">
                 <div class="success-card">
-                  <img src="/images/img/success-icon-2.svg" alt="Icon: Success-icon" class="js-svg-img">
+                  <img src="/images/img/success-icon-2.svg" alt="Icon: Success-icon" class="js-svg-img success-card-img">
                   <p class="success-text">Рекомендуйте Jazz-Holding, создавая личную команду активных потребителей</p>
                   <span class="order-num">02</span>
                 </div>
@@ -514,7 +516,7 @@
               <!-- /.col-md-4 -->
               <div class="col-md-4">
                 <div class="success-card">
-                  <img src="/images/img/success-icon-3.svg" alt="Icon: Success-icon" class="js-svg-img">
+                  <img src="/images/img/success-icon-3.svg" alt="Icon: Success-icon" class="js-svg-img success-card-img">
                   <p class="success-text">Станьте Экспертом бренда, получая пассивный доход и щедрые подарки
                   </p>
                   <span class="order-num">03</span>
