--- a/catalog_page.html
+++ b/catalog_page.html
@@ -6,19 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jazz</title>
   <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
+  <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
   <link rel="stylesheet" href="/images/css/catalog_page.css">
+  <script src="/images/fancybox/fancybox.umd.js" defer></script>
+  <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
-  <script src="/images/js/script.js" defer></script>
 </head>
 <body>
   <div class="page-root">
-    <header class="header container">
-      <div class="row">
+    <header class="header">
+      <div class="container">
+        <div class="row">
           <div class="col-md-2">
             <a href="/" class="logo">
-              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-images" />
+              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
             </a>
           </div>
            <div class="col-md-8">
@@ -50,6 +54,8 @@
           <!-- /.col-md-2 -->
         </div>
       <!-- /.row -->
+      </div>
+      <!-- /.container -->
     </header>
     <main>
       <div class="section-yellow"></div>
@@ -73,12 +79,15 @@
         <div class="col-md-4">
           <div class="sidebar">
             <div class="sidebar-box sidebar-search">
-              <span class="sidebar-text">Поиск</span>
-              <div class="sidebar-arrow sidebar-search-arrow">
-                <img src="/images/img/arrow.svg" alt="Icon: arrow" class="js-svg-img">
-              </div>
+              <a href="#" class="sidebar-btn">
+                <span class="sidebar-text">Поиск</span>
+                <div class="sidebar-arrow sidebar-search-arrow">
+                  <img src="/images/img/arrow.svg" alt="Icon: arrow" class="js-svg-img">
+                </div>
+              </a>
+              <!-- /.sidebar-btn -->
               <hr class="sidebar-line"> 
-              <form>
+              <form class="sidebar-form search-form">
                 <input class="search-input" placeholder="Что ищете?" type="search">
                 <div class="search-icon">
                   <img src="/images/img/search-icon.svg" alt="Icon: search" class="js-svg-img">                   
@@ -87,28 +96,34 @@
             </div>
             <!-- /.sidebar-box -->
             <div class="sidebar-box sidebar-price">
-              <span class="sidebar-text">Цена (руб.)</span>
-              <div class="sidebar-arrow sidebar-price-arrow">
-                <img src="/images/img/arrow.svg" alt="Icon: arrow" class="js-svg-img">
-              </div>
+              <a href="#" class="sidebar-btn">
+                <span class="sidebar-text">Цена (руб.)</span>
+                <div class="sidebar-arrow sidebar-price-arrow">
+                  <img src="/images/img/arrow.svg" alt="Icon: arrow" class="js-svg-img">
+                </div>
+              </a>
+              <!-- /.sidebar-btn -->
               <hr class="sidebar-line"> 
-              <div class="price-input-group">
-                <input type="text" placeholder="От 0" class = "price-input">
-                <span class="price-input-devider">-</span>
-                <input type="text" placeholder="10 000" class = "price-input"> 
+              <div class="sidebar-form">
+                <div class="price-input-group">
+                  <input type="text" placeholder="От 0" class = "price-input">
+                  <span class="price-input-devider">-</span>
+                  <input type="text" placeholder="10 000" class = "price-input"> 
+                </div>
+                <!-- /.price-input-group -->
+                <div class="range-filter">
+                  <div class="range-controls">
+                    <div class="scale">
+                      <div class="bar"></div>
+                    </div>
+                    <div class="toggle min-toggle"></div>
+                    <div class="toggle max-toggle"></div>
+                </div>
+                <!-- /.range-controls -->
+                </div>
+                <!-- /.range-filter -->
               </div>
-              <!-- /.price-input-group -->
-              <div class="range-filter">
-                <div class="range-controls">
-                  <div class="scale">
-                    <div class="bar"></div>
-                  </div>
-                  <div class="toggle min-toggle"></div>
-                  <div class="toggle max-toggle"></div>
-              </div>
-              <!-- /.range-controls -->
-              </div>
-              <!-- /.range-filter -->
+              <!-- /.sidebar-form -->
             </div>
             <!-- /.sidebar-box -->
           </div>
