--- a/index.html
+++ b/index.html
@@ -18,44 +18,47 @@
 <body>
    <div class="page-root">
     <header class="header">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <a href="/" class="logo">
-              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
-            </a>
-          </div>
-           <div class="col-md-8">
-            <nav class="nav-menu">
-              <ul class="nav-list">
-                <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">О продукции</a></li>
-                <li class="nav-item"><a href="/catalog.html" class="nav-link">Магазин</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Новости</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Бизнес</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Продукция</a></li>
-              </ul>
-            </nav>
-           </div>
-          <div class="col-md-2">
-            <div class="link-group">
-              <a href = "#" class="user-link primary-link">
-                <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
-                Войти
-              </a>
-              <a href = "#" class="cart-link">
-                <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
-                <span class="products-num">3</span>
+      <div class="header-fixed">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-2">
+              <a href="/" class="logo">
+                <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
               </a>
             </div>
-            <!-- /.link-group -->
+             <div class="col-md-8">
+              <nav class="nav-menu">
+                <ul class="nav-list">
+                  <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">О продукции</a></li>
+                  <li class="nav-item"><a href="/catalog.html" class="nav-link">Магазин</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Новости</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Бизнес</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Продукция</a></li>
+                </ul>
+              </nav>
+             </div>
+            <div class="col-md-2">
+              <div class="link-group">
+                <a href = "#" class="user-link primary-link">
+                  <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
+                  Войти
+                </a>
+                <a href = "#" class="cart-link">
+                  <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
+                  <span class="products-num">3</span>
+                </a>
+              </div>
+              <!-- /.link-group -->
+            </div>
+            <!-- /.col-md-2 -->
           </div>
-          <!-- /.col-md-2 -->
+        <!-- /.row -->
         </div>
-      <!-- /.row -->
+        <!-- /.container -->
       </div>
-      <!-- /.container -->
+      <!-- /.header-inner -->
     </header>
     <main>
       <section class="banner section-yellow">
@@ -457,27 +460,27 @@
               <p class="business-text">Сбалансируйте все сферы своей жизни став активным потребителем Jazz-Holding! Здоровый напитки, эко-продукты, органические продукты и возможность зарабатывать кэшбэк за рекомендацию нашего STORE.</p>
               <div class="business-tips">
                 <div class="business-tip">
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon">
                   <div class="tip-text">Рекомендуйте эко-продукты своим друзьям и знакомым и зарабатывайте с каждой покупки</div>
                 </div>
                 <!-- /.business-tip -->
                 <div class="business-tip">
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon">
                   <div class="tip-text">Участвуйте в программах Jazz STORE и получайте авто, квартиру и другие ценные подарки</div>
                 </div>
                 <!-- /.business-tip -->
                 <div class="business-tip">
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon">
                   <div class="tip-text">Самых активных и вовлеченных мы награждаем денежными премиями</div>
                 </div>
                 <!-- /.business-tip -->
                 <div class="business-tip">
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon">
                   <div class="tip-text">Обучайтесь, заводите полезные знакомства и становитесь экспертом наших брендов</div>
                 </div>
                 <!-- /.business-tip -->
                 <div class="business-tip">
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon">
                   <div class="tip-text">Наслаждайтесь жизнью, путешествуйте и поддерживайте здоровый образ жизни вместе с Jazz-Holding!</div>
                 </div>
                 <!-- /.business-tip -->
@@ -542,13 +545,13 @@
               <div class="reliability-card reliability-card-left">
                 <div class="reliability-card-text">Сохранность и неизменность
                   внесенной информации</div>
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon">
               </div>
               <!-- /.reliability-card -->
               <div class="reliability-card reliability-card-left">
                 <div class="reliability-card-text">Высокая скорость
                   финансовых операций</div>
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon">
               </div>
               <!-- /.reliability-card -->
             </div>
@@ -557,7 +560,7 @@
               <img src="images/img/logo-lg.png" alt="Logo: Jazz" class="logo-lg">
               <div class="reliability-card reliability-card-right">
                 <div class="reliability-card-text order-2">Защита от любых мошеннических действий</div>
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img order-1">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon order-1">
               </div>
               <!-- /.reliability-card -->
               <a href="#" class="reliability-link primary-link">Присоединиться</a>
@@ -567,13 +570,13 @@
               <div class="reliability-card reliability-card-right">
                 <div class="reliability-card-text order-2">Исполнение всех
                   обязательств и выплат</div>
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img order-1">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon order-1">
               </div>
               <!-- /.reliability-card -->
               <div class="reliability-card reliability-card-right">
                 <div class="reliability-card-text order-2">Полная прозрачность
                   транзакций</div>
-                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img order-1">
+                  <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon order-1">
               </div>
               <!-- /.reliability-card -->
             </div>
@@ -619,7 +622,7 @@
       <div class="row">
         <div class="col-md-2">
           <div class="footer-logo">
-            <a href="/" class="logo"><img src="/images/img/logo-footer.png" alt="Logo: Jazz" class="footer-logo-image"></a>
+            <a href="/" class="footer-logo-link"><img src="/images/img/logo-footer.png" alt="Logo: Jazz" class="footer-logo-image"></a>
             <div class="footer-logo-text">Jazz STORE - </br>Все лучшее людям!</div>
           </div>
           <!-- /.footer-logo -->
