--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
   <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
-  <link rel="stylesheet" href="/images/css/product.css">
+  <link rel="stylesheet" href="/images/css/main.css">
   <script src="/images/fancybox/fancybox.umd.js" defer></script>
   <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
@@ -19,47 +19,50 @@
 <body>
   <div class="page-root">
     <header class="header">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <a href="/" class="logo">
-              <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
-            </a>
-          </div>
-           <div class="col-md-8">
-            <nav class="nav-menu">
-              <ul class="nav-list">
-                <li class="nav-item"><a href="/" class="nav-link">Главная</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">О продукции</a></li>
-                <li class="nav-item"><a href="/catalog.html" class="nav-link">Магазин</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Новости</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Бизнес</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Продукция</a></li>
-              </ul>
-            </nav>
-           </div>
-          <div class="col-md-2">
-            <div class="link-group">
-              <a href = "#" class="user-link primary-link">
-                <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
-                Войти
-              </a>
-              <a href = "#" class="cart-link">
-                <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
-                <span class="products-num">3</span>
+      <div class="header-fixed">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-2">
+              <a href="/" class="logo">
+                <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
               </a>
             </div>
-            <!-- /.link-group -->
+             <div class="col-md-8">
+              <nav class="nav-menu">
+                <ul class="nav-list">
+                  <li class="nav-item"><a href="/" class="nav-link">Главная</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">О продукции</a></li>
+                  <li class="nav-item"><a href="/catalog.html" class="nav-link">Магазин</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Новости</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Бизнес</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Продукция</a></li>
+                </ul>
+              </nav>
+             </div>
+            <div class="col-md-2">
+              <div class="link-group">
+                <a href = "#" class="user-link primary-link">
+                  <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
+                  Войти
+                </a>
+                <a href = "#" class="cart-link">
+                  <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
+                  <span class="products-num">3</span>
+                </a>
+              </div>
+              <!-- /.link-group -->
+            </div>
+            <!-- /.col-md-2 -->
           </div>
-          <!-- /.col-md-2 -->
+        <!-- /.row -->
         </div>
-      <!-- /.row -->
+        <!-- /.container -->
       </div>
-      <!-- /.container -->
+      <!-- /.header-fixed -->
     </header>
     <main>
-      <div class="section-yellow"></div>
+      <div class="second-section-yellow product-yellow"></div>
     <!-- /.section-yellow -->
     <div class="bread container">
       <ul class="bread-ul">
@@ -73,7 +76,7 @@
       <!-- /.bread-ul -->
     </div>
     <!-- /.bread -->
-    <div class="product-card container">
+    <div class="pr-product-card container">
       <div class="row">
         <div class="col-md-6">
           <div class="product-image-wrapper">
@@ -93,8 +96,8 @@
             <!-- /.on-stock -->
             </div>
             <!-- /.product-card-top -->
-            <div class="product-card-title">Свежеобжаренный кофе Ethiopia Israel Degfa</div>
-            <div class="product-card-text"> В аромате жасминовый чай и лист чёрной смородины, во вкусе сладкая вишня, дикая слива, миндаль и оттенки цитрусов. Послевкусие продолжительное, кислотность яблочная, деликатная, средняя. Тело среднее, округлое.</div>
+            <div class="pr-product-card-title">Свежеобжаренный кофе Ethiopia Israel Degfa</div>
+            <div class="pr-product-card-text"> В аромате жасминовый чай и лист чёрной смородины, во вкусе сладкая вишня, дикая слива, миндаль и оттенки цитрусов. Послевкусие продолжительное, кислотность яблочная, деликатная, средняя. Тело среднее, округлое.</div>
           </div>
           <div class="product-wrapper">
           <form action="" class="link-form">
@@ -106,8 +109,8 @@
           </form>
           <!-- /.product-card-content -->
           <span class="dropdown-title">Выберите вес:</span>
-          <div class="product-dropdown">
-            <select class="select">   
+          <div class="product-dropdown pr-product-dropdown">
+            <select class="select pr-select">   
              <option selected>Масса: 250 гр. - 4 800 рублей</option>  
              <option>Масса: 250 гр. - 4 800 рублей</option>   
              <option>Масса: 250 гр. - 4 800 рублей</option>  
@@ -128,17 +131,17 @@
            </div>
            <!-- /.product-weight -->
           <div class="amount">
-            <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
+            <div class="minus pr"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
             <div class="num">1</div>
-            <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
+            <div class="plus pr"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
           </div>
-          <a href="#" class="buy-link primary-link">
+          <a href="#" class="pr-buy-link buy-link primary-link">
             В корзину
           </a>
         </div>
         <!-- /.product-buy -->
           </div>
-          <!-- /.product-wrapper -->
+          <!-- /.catalog-product-wrapper -->
         </div>
         <!-- /.col-md-6 -->
       </div>
@@ -241,7 +244,7 @@
       <div class="row">
         <div class="col-md-2">
           <div class="footer-logo">
-            <a href="/" class="footer-logo"><img src="/images/img/logo-footer.png" alt="Logo: Jazz" class="footer-logo-image"></a>
+            <a href="/" class="footer-logo-link"><img src="/images/img/logo-footer.png" alt="Logo: Jazz" class="footer-logo-image"></a>
             <div class="footer-logo-text">Jazz STORE - </br>Все лучшее людям!</div>
           </div>
           <!-- /.footer-logo -->
